<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/purple_500"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp">


    <TextView
        android:id="@+id/tv_rv_alarm_hour_am_pm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:gravity="bottom"
        android:hint="@string/hint_alarm_hour_am"
        android:textSize="35sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_rv_alarm_hour"
        app:layout_constraintBottom_toBottomOf="@id/tv_rv_alarm_hour"
        app:layout_constraintEnd_toStartOf="@+id/tv_rv_alarm_hour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_rv_alarm_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hint_alarm_hour"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@id/tv_rv_alarm_sunday"
        app:layout_constraintEnd_toEndOf="@+id/tv_rv_alarm_time_middle"
        app:layout_constraintStart_toEndOf="@id/tv_rv_alarm_hour_am_pm"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_rv_alarm_time_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_middle"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_rv_alarm_sunday"
        app:layout_constraintStart_toEndOf="@+id/tv_rv_alarm_hour"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_rv_alarm_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hint_alarm_minutes"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@id/tv_rv_alarm_sunday"
        app:layout_constraintStart_toEndOf="@+id/tv_rv_alarm_time_middle"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_alarm_on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_rv_alarm_sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/str_alarm_sunday"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rv_alarm_hour_am_pm" />

    <TextView
        android:id="@+id/tv_rv_alarm_monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:hint="@string/str_alarm_monday"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_rv_alarm_sunday"
        app:layout_constraintTop_toBottomOf="@id/tv_rv_alarm_hour_am_pm" />


    <TextView
        android:id="@+id/tv_rv_alarm_tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:hint="@string/str_alarm_tuesday"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_rv_alarm_monday"
        app:layout_constraintTop_toBottomOf="@id/tv_rv_alarm_hour_am_pm" />

    <TextView
        android:id="@+id/tv_rv_alarm_wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:hint="@string/str_alarm_wednesday"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_rv_alarm_tuesday"
        app:layout_constraintTop_toBottomOf="@id/tv_rv_alarm_hour_am_pm" />

    <TextView
        android:id="@+id/tv_rv_alarm_thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:hint="@string/str_alarm_thursday"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_rv_alarm_wednesday"
        app:layout_constraintTop_toBottomOf="@id/tv_rv_alarm_hour_am_pm" />

    <TextView
        android:id="@+id/tv_rv_alarm_friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:hint="@string/str_alarm_friday"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_rv_alarm_thursday"
        app:layout_constraintTop_toBottomOf="@id/tv_rv_alarm_hour_am_pm" />

    <TextView
        android:id="@+id/tv_rv_alarm_saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:hint="@string/str_alarm_saturday"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_rv_alarm_friday"
        app:layout_constraintTop_toBottomOf="@id/tv_rv_alarm_hour_am_pm" />

</androidx.constraintlayout.widget.ConstraintLayout>